trabalho 3/teste/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On FUNCAO shift to state 1
-- On programa shift to state 133
-- On nonempty_list(funcoes) shift to state 134
-- On funcoes shift to state 136

State 1:
funcoes -> FUNCAO . ID APAR list(argumentos) FPAR list(declaracao) list(comando) END [ FUNCAO EOF ]
-- On ID shift to state 2

State 2:
funcoes -> FUNCAO ID . APAR list(argumentos) FPAR list(declaracao) list(comando) END [ FUNCAO EOF ]
-- On APAR shift to state 3

State 3:
funcoes -> FUNCAO ID APAR . list(argumentos) FPAR list(declaracao) list(comando) END [ FUNCAO EOF ]
-- On TIPO_STRING shift to state 4
-- On TIPO_INT shift to state 5
-- On TIPO_BOOLEAN shift to state 6
-- On tipo_simples shift to state 7
-- On list(argumentos) shift to state 9
-- On argumentos shift to state 131
-- On FPAR reduce production list(argumentos) -> 

State 4:
tipo_simples -> TIPO_STRING . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_STRING 

State 5:
tipo_simples -> TIPO_INT . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_INT 

State 6:
tipo_simples -> TIPO_BOOLEAN . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_BOOLEAN 

State 7:
argumentos -> tipo_simples . ID [ TIPO_STRING TIPO_INT TIPO_BOOLEAN FPAR ]
-- On ID shift to state 8

State 8:
argumentos -> tipo_simples ID . [ TIPO_STRING TIPO_INT TIPO_BOOLEAN FPAR ]
-- On TIPO_STRING reduce production argumentos -> tipo_simples ID 
-- On TIPO_INT reduce production argumentos -> tipo_simples ID 
-- On TIPO_BOOLEAN reduce production argumentos -> tipo_simples ID 
-- On FPAR reduce production argumentos -> tipo_simples ID 

State 9:
funcoes -> FUNCAO ID APAR list(argumentos) . FPAR list(declaracao) list(comando) END [ FUNCAO EOF ]
-- On FPAR shift to state 10

State 10:
funcoes -> FUNCAO ID APAR list(argumentos) FPAR . list(declaracao) list(comando) END [ FUNCAO EOF ]
-- On TIPO_STRING shift to state 4
-- On TIPO_INT shift to state 5
-- On TIPO_BOOLEAN shift to state 6
-- On tipo_simples shift to state 11
-- On tipo shift to state 12
-- On list(declaracao) shift to state 15
-- On declaracao shift to state 129
-- On WHILE reduce production list(declaracao) -> 
-- On RETURN reduce production list(declaracao) -> 
-- On PRINT reduce production list(declaracao) -> 
-- On IF reduce production list(declaracao) -> 
-- On ID reduce production list(declaracao) -> 
-- On FOR reduce production list(declaracao) -> 
-- On END reduce production list(declaracao) -> 

State 11:
tipo -> tipo_simples . [ ID ]
-- On ID reduce production tipo -> tipo_simples 

State 12:
declaracao -> tipo . variavel [ WHILE TIPO_STRING TIPO_INT TIPO_BOOLEAN RETURN PRINT IF ID FOR END ]
-- On ID shift to state 13
-- On variavel shift to state 14

State 13:
variavel -> ID . [ WHILE TIPO_STRING TIPO_INT TIPO_BOOLEAN THEN TAMANHO SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA ATRIB AND_BINARIO AND ADICAO ]
-- On WHILE reduce production variavel -> ID 
-- On TIPO_STRING reduce production variavel -> ID 
-- On TIPO_INT reduce production variavel -> ID 
-- On TIPO_BOOLEAN reduce production variavel -> ID 
-- On THEN reduce production variavel -> ID 
-- On TAMANHO reduce production variavel -> ID 
-- On SUBTRACAO reduce production variavel -> ID 
-- On RETURN reduce production variavel -> ID 
-- On PRINT reduce production variavel -> ID 
-- On OR_BINARIO_EXCLUSIVO reduce production variavel -> ID 
-- On OR_BINARIO reduce production variavel -> ID 
-- On OR reduce production variavel -> ID 
-- On NOT reduce production variavel -> ID 
-- On NAO_EQUIVALENTE reduce production variavel -> ID 
-- On MULT_POR_2 reduce production variavel -> ID 
-- On MULTIPLICACAO reduce production variavel -> ID 
-- On MODULO reduce production variavel -> ID 
-- On MENOR_OU_IGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIOR_OU_IGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IF reduce production variavel -> ID 
-- On ID reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On FOR reduce production variavel -> ID 
-- On EXPONENCIACAO reduce production variavel -> ID 
-- On EQUIVALENTE reduce production variavel -> ID 
-- On END reduce production variavel -> ID 
-- On ELSE reduce production variavel -> ID 
-- On DO reduce production variavel -> ID 
-- On DIV_POR_2 reduce production variavel -> ID 
-- On DIVISAO_INTEIRO reduce production variavel -> ID 
-- On DIVISAO reduce production variavel -> ID 
-- On CONCATENA reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On AND_BINARIO reduce production variavel -> ID 
-- On AND reduce production variavel -> ID 
-- On ADICAO reduce production variavel -> ID 

State 14:
declaracao -> tipo variavel . [ WHILE TIPO_STRING TIPO_INT TIPO_BOOLEAN RETURN PRINT IF ID FOR END ]
-- On WHILE reduce production declaracao -> tipo variavel 
-- On TIPO_STRING reduce production declaracao -> tipo variavel 
-- On TIPO_INT reduce production declaracao -> tipo variavel 
-- On TIPO_BOOLEAN reduce production declaracao -> tipo variavel 
-- On RETURN reduce production declaracao -> tipo variavel 
-- On PRINT reduce production declaracao -> tipo variavel 
-- On IF reduce production declaracao -> tipo variavel 
-- On ID reduce production declaracao -> tipo variavel 
-- On FOR reduce production declaracao -> tipo variavel 
-- On END reduce production declaracao -> tipo variavel 

State 15:
funcoes -> FUNCAO ID APAR list(argumentos) FPAR list(declaracao) . list(comando) END [ FUNCAO EOF ]
-- On WHILE shift to state 16
-- On RETURN shift to state 72
-- On PRINT shift to state 74
-- On IF shift to state 78
-- On ID shift to state 81
-- On FOR shift to state 87
-- On variavel shift to state 96
-- On list(comando) shift to state 127
-- On comando_while shift to state 108
-- On comando_scan shift to state 109
-- On comando_retorno shift to state 110
-- On comando_print shift to state 111
-- On comando_if shift to state 112
-- On comando_funcao shift to state 113
-- On comando_for shift to state 114
-- On comando_atribuicao shift to state 115
-- On comando shift to state 116
-- On END reduce production list(comando) -> 

State 16:
comando_while -> WHILE . expressao DO list(comando) END [ WHILE RETURN PRINT IF ID FOR END ELSE ]
-- On LITSTRING shift to state 17
-- On LITINT shift to state 18
-- On ID shift to state 13
-- On BOOL shift to state 19
-- On APAR shift to state 20
-- On variavel shift to state 21
-- On expressao shift to state 70

State 17:
expressao -> LITSTRING . [ WHILE THEN TAMANHO SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
-- On WHILE reduce production expressao -> LITSTRING 
-- On THEN reduce production expressao -> LITSTRING 
-- On TAMANHO reduce production expressao -> LITSTRING 
-- On SUBTRACAO reduce production expressao -> LITSTRING 
-- On RETURN reduce production expressao -> LITSTRING 
-- On PRINT reduce production expressao -> LITSTRING 
-- On OR_BINARIO_EXCLUSIVO reduce production expressao -> LITSTRING 
-- On OR_BINARIO reduce production expressao -> LITSTRING 
-- On OR reduce production expressao -> LITSTRING 
-- On NOT reduce production expressao -> LITSTRING 
-- On NAO_EQUIVALENTE reduce production expressao -> LITSTRING 
-- On MULT_POR_2 reduce production expressao -> LITSTRING 
-- On MULTIPLICACAO reduce production expressao -> LITSTRING 
-- On MODULO reduce production expressao -> LITSTRING 
-- On MENOR_OU_IGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIOR_OU_IGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IF reduce production expressao -> LITSTRING 
-- On ID reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On FOR reduce production expressao -> LITSTRING 
-- On EXPONENCIACAO reduce production expressao -> LITSTRING 
-- On EQUIVALENTE reduce production expressao -> LITSTRING 
-- On END reduce production expressao -> LITSTRING 
-- On ELSE reduce production expressao -> LITSTRING 
-- On DO reduce production expressao -> LITSTRING 
-- On DIV_POR_2 reduce production expressao -> LITSTRING 
-- On DIVISAO_INTEIRO reduce production expressao -> LITSTRING 
-- On DIVISAO reduce production expressao -> LITSTRING 
-- On CONCATENA reduce production expressao -> LITSTRING 
-- On AND_BINARIO reduce production expressao -> LITSTRING 
-- On AND reduce production expressao -> LITSTRING 
-- On ADICAO reduce production expressao -> LITSTRING 

State 18:
expressao -> LITINT . [ WHILE THEN TAMANHO SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
-- On WHILE reduce production expressao -> LITINT 
-- On THEN reduce production expressao -> LITINT 
-- On TAMANHO reduce production expressao -> LITINT 
-- On SUBTRACAO reduce production expressao -> LITINT 
-- On RETURN reduce production expressao -> LITINT 
-- On PRINT reduce production expressao -> LITINT 
-- On OR_BINARIO_EXCLUSIVO reduce production expressao -> LITINT 
-- On OR_BINARIO reduce production expressao -> LITINT 
-- On OR reduce production expressao -> LITINT 
-- On NOT reduce production expressao -> LITINT 
-- On NAO_EQUIVALENTE reduce production expressao -> LITINT 
-- On MULT_POR_2 reduce production expressao -> LITINT 
-- On MULTIPLICACAO reduce production expressao -> LITINT 
-- On MODULO reduce production expressao -> LITINT 
-- On MENOR_OU_IGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIOR_OU_IGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IF reduce production expressao -> LITINT 
-- On ID reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On FOR reduce production expressao -> LITINT 
-- On EXPONENCIACAO reduce production expressao -> LITINT 
-- On EQUIVALENTE reduce production expressao -> LITINT 
-- On END reduce production expressao -> LITINT 
-- On ELSE reduce production expressao -> LITINT 
-- On DO reduce production expressao -> LITINT 
-- On DIV_POR_2 reduce production expressao -> LITINT 
-- On DIVISAO_INTEIRO reduce production expressao -> LITINT 
-- On DIVISAO reduce production expressao -> LITINT 
-- On CONCATENA reduce production expressao -> LITINT 
-- On AND_BINARIO reduce production expressao -> LITINT 
-- On AND reduce production expressao -> LITINT 
-- On ADICAO reduce production expressao -> LITINT 

State 19:
expressao -> BOOL . [ WHILE THEN TAMANHO SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
-- On WHILE reduce production expressao -> BOOL 
-- On THEN reduce production expressao -> BOOL 
-- On TAMANHO reduce production expressao -> BOOL 
-- On SUBTRACAO reduce production expressao -> BOOL 
-- On RETURN reduce production expressao -> BOOL 
-- On PRINT reduce production expressao -> BOOL 
-- On OR_BINARIO_EXCLUSIVO reduce production expressao -> BOOL 
-- On OR_BINARIO reduce production expressao -> BOOL 
-- On OR reduce production expressao -> BOOL 
-- On NOT reduce production expressao -> BOOL 
-- On NAO_EQUIVALENTE reduce production expressao -> BOOL 
-- On MULT_POR_2 reduce production expressao -> BOOL 
-- On MULTIPLICACAO reduce production expressao -> BOOL 
-- On MODULO reduce production expressao -> BOOL 
-- On MENOR_OU_IGUAL reduce production expressao -> BOOL 
-- On MENOR reduce production expressao -> BOOL 
-- On MAIOR_OU_IGUAL reduce production expressao -> BOOL 
-- On MAIOR reduce production expressao -> BOOL 
-- On IF reduce production expressao -> BOOL 
-- On ID reduce production expressao -> BOOL 
-- On FPAR reduce production expressao -> BOOL 
-- On FOR reduce production expressao -> BOOL 
-- On EXPONENCIACAO reduce production expressao -> BOOL 
-- On EQUIVALENTE reduce production expressao -> BOOL 
-- On END reduce production expressao -> BOOL 
-- On ELSE reduce production expressao -> BOOL 
-- On DO reduce production expressao -> BOOL 
-- On DIV_POR_2 reduce production expressao -> BOOL 
-- On DIVISAO_INTEIRO reduce production expressao -> BOOL 
-- On DIVISAO reduce production expressao -> BOOL 
-- On CONCATENA reduce production expressao -> BOOL 
-- On AND_BINARIO reduce production expressao -> BOOL 
-- On AND reduce production expressao -> BOOL 
-- On ADICAO reduce production expressao -> BOOL 

State 20:
expressao -> APAR . expressao FPAR [ WHILE THEN TAMANHO SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
-- On LITSTRING shift to state 17
-- On LITINT shift to state 18
-- On ID shift to state 13
-- On BOOL shift to state 19
-- On APAR shift to state 20
-- On variavel shift to state 21
-- On expressao shift to state 22

State 21:
expressao -> variavel . [ WHILE THEN TAMANHO SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
-- On WHILE reduce production expressao -> variavel 
-- On THEN reduce production expressao -> variavel 
-- On TAMANHO reduce production expressao -> variavel 
-- On SUBTRACAO reduce production expressao -> variavel 
-- On RETURN reduce production expressao -> variavel 
-- On PRINT reduce production expressao -> variavel 
-- On OR_BINARIO_EXCLUSIVO reduce production expressao -> variavel 
-- On OR_BINARIO reduce production expressao -> variavel 
-- On OR reduce production expressao -> variavel 
-- On NOT reduce production expressao -> variavel 
-- On NAO_EQUIVALENTE reduce production expressao -> variavel 
-- On MULT_POR_2 reduce production expressao -> variavel 
-- On MULTIPLICACAO reduce production expressao -> variavel 
-- On MODULO reduce production expressao -> variavel 
-- On MENOR_OU_IGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIOR_OU_IGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IF reduce production expressao -> variavel 
-- On ID reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On FOR reduce production expressao -> variavel 
-- On EXPONENCIACAO reduce production expressao -> variavel 
-- On EQUIVALENTE reduce production expressao -> variavel 
-- On END reduce production expressao -> variavel 
-- On ELSE reduce production expressao -> variavel 
-- On DO reduce production expressao -> variavel 
-- On DIV_POR_2 reduce production expressao -> variavel 
-- On DIVISAO_INTEIRO reduce production expressao -> variavel 
-- On DIVISAO reduce production expressao -> variavel 
-- On CONCATENA reduce production expressao -> variavel 
-- On AND_BINARIO reduce production expressao -> variavel 
-- On AND reduce production expressao -> variavel 
-- On ADICAO reduce production expressao -> variavel 

State 22:
expressao -> expressao . OR expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . AND expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . MAIOR expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . MENOR expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . MAIOR_OU_IGUAL expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . MENOR_OU_IGUAL expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . EQUIVALENTE expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . NAO_EQUIVALENTE expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . OR_BINARIO expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . OR_BINARIO_EXCLUSIVO expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . AND_BINARIO expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . MULT_POR_2 expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . DIV_POR_2 expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . CONCATENA expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . ADICAO expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
expressao -> expressao . SUBTRACAO expressao [ TAMANHO SUBTRACAO OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR FPAR EXPONENCIACAO EQUIVALENTE DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA AND_BINARIO AND ADICAO ]
